Primeira versão do projeto

--- a/cat-vs-dog.ipynb
+++ b/cat-vs-dog.ipynb
@@ -559,31 +559,31 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      "\u001b[1m625/625\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m30s\u001b[0m 43ms/step - accuracy: 0.5660 - loss: 0.6784 - val_accuracy: 0.6996 - val_loss: 0.5857\n",
+      "\u001b[1m625/625\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m37s\u001b[0m 53ms/step - accuracy: 0.5849 - loss: 0.6608 - val_accuracy: 0.7168 - val_loss: 0.5553\n",
       "Epoch 2/10\n",
-      "\u001b[1m625/625\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m26s\u001b[0m 42ms/step - accuracy: 0.7082 - loss: 0.5772 - val_accuracy: 0.7408 - val_loss: 0.5282\n",
+      "\u001b[1m625/625\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m36s\u001b[0m 57ms/step - accuracy: 0.7334 - loss: 0.5321 - val_accuracy: 0.7858 - val_loss: 0.4575\n",
       "Epoch 3/10\n",
-      "\u001b[1m625/625\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m26s\u001b[0m 42ms/step - accuracy: 0.7646 - loss: 0.4922 - val_accuracy: 0.7988 - val_loss: 0.4371\n",
+      "\u001b[1m625/625\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m27s\u001b[0m 44ms/step - accuracy: 0.7840 - loss: 0.4579 - val_accuracy: 0.8062 - val_loss: 0.4287\n",
       "Epoch 4/10\n",
-      "\u001b[1m625/625\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m26s\u001b[0m 42ms/step - accuracy: 0.8089 - loss: 0.4281 - val_accuracy: 0.8026 - val_loss: 0.4221\n",
+      "\u001b[1m625/625\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m27s\u001b[0m 43ms/step - accuracy: 0.8206 - loss: 0.3992 - val_accuracy: 0.7714 - val_loss: 0.4711\n",
       "Epoch 5/10\n",
-      "\u001b[1m625/625\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m26s\u001b[0m 42ms/step - accuracy: 0.8295 - loss: 0.3847 - val_accuracy: 0.8256 - val_loss: 0.3849\n",
+      "\u001b[1m625/625\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m29s\u001b[0m 47ms/step - accuracy: 0.8433 - loss: 0.3594 - val_accuracy: 0.8240 - val_loss: 0.3887\n",
       "Epoch 6/10\n",
-      "\u001b[1m625/625\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m27s\u001b[0m 43ms/step - accuracy: 0.8550 - loss: 0.3387 - val_accuracy: 0.8374 - val_loss: 0.3681\n",
+      "\u001b[1m625/625\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m27s\u001b[0m 44ms/step - accuracy: 0.8687 - loss: 0.3053 - val_accuracy: 0.8402 - val_loss: 0.3586\n",
       "Epoch 7/10\n",
-      "\u001b[1m625/625\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m27s\u001b[0m 43ms/step - accuracy: 0.8759 - loss: 0.2974 - val_accuracy: 0.8448 - val_loss: 0.3575\n",
+      "\u001b[1m625/625\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m34s\u001b[0m 54ms/step - accuracy: 0.8866 - loss: 0.2645 - val_accuracy: 0.8246 - val_loss: 0.4115\n",
       "Epoch 8/10\n",
-      "\u001b[1m625/625\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m26s\u001b[0m 42ms/step - accuracy: 0.8850 - loss: 0.2678 - val_accuracy: 0.8426 - val_loss: 0.3914\n",
+      "\u001b[1m625/625\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m37s\u001b[0m 59ms/step - accuracy: 0.9032 - loss: 0.2325 - val_accuracy: 0.8586 - val_loss: 0.3421\n",
       "Epoch 9/10\n",
-      "\u001b[1m625/625\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m26s\u001b[0m 42ms/step - accuracy: 0.9050 - loss: 0.2306 - val_accuracy: 0.8582 - val_loss: 0.3555\n",
+      "\u001b[1m625/625\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m33s\u001b[0m 53ms/step - accuracy: 0.9216 - loss: 0.1861 - val_accuracy: 0.8506 - val_loss: 0.3746\n",
       "Epoch 10/10\n",
-      "\u001b[1m625/625\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m27s\u001b[0m 43ms/step - accuracy: 0.9214 - loss: 0.1937 - val_accuracy: 0.8528 - val_loss: 0.3777\n"
+      "\u001b[1m625/625\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m28s\u001b[0m 44ms/step - accuracy: 0.9392 - loss: 0.1554 - val_accuracy: 0.8374 - val_loss: 0.4563\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.src.callbacks.history.History at 0x149ab29be30>"
+       "<keras.src.callbacks.history.History at 0x27e71075ac0>"
       ]
      },
      "execution_count": 18,
@@ -597,8 +597,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "3ce12cff-a9ec-43a7-9a49-e81999d8c10d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:absl:You are saving your model as an HDF5 file via `model.save()` or `keras.saving.save_model(model)`. This file format is considered legacy. We recommend using instead the native Keras format, e.g. `model.save('my_model.keras')` or `keras.saving.save_model(model, 'my_model.keras')`. \n"
+     ]
+    }
+   ],
+   "source": [
+    "modelo.save('modelo.h5')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fc81f172-e5b1-4a02-bbb0-faaf0be25891",
    "metadata": {},
    "outputs": [],
    "source": []
