Correção de RunTimeError

--- a/dog-vs-cat.ipynb
+++ b/dog-vs-cat.ipynb
@@ -12742,10 +12742,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "ad84cf96-b76a-4987-8d36-0a26760acaf3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Acurácia: 78.76%\n"
+     ]
+    }
+   ],
    "source": [
     "# teste\n",
     "test(modelo, test_loader)"
